2008-08-02  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/i386/machine-lock.h (__spin_unlock, __spin_try_lock):
	Add memory clobbers.

2008-08-02  Ulrich Drepper  <drepper@redhat.com>

	* manual/arith.texi: Avoid @strong{Note:}.
	* manual/creature.texi: Likewise.
	* manual/filesys.texi: Likewise.
	* manual/math.texi: Likewise.
	* manual/memory.texi: Likewise.
	* manual/resource.texi: Likewise.
	* manual/syslog.texi: Likewise.
	* manual/time.texi: Likewise.

	* sysdeps/posix/clock_getres.c (hp_timing_getres): Remove inline
	to prevent warning.

2008-08-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/Versions: Fix changes due to old patch for
	new epoll_create1 interface.
	* sysdeps/unix/sysv/linux/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/sys/epoll.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sys/epoll.h: Likewise.

	* include/arpa/nameser.h (NS_GET16): Use const pointer.
	(NS_GET32): Likewise.

	* sysdeps/unix/sysv/linux/kernel-features.h: s390 has the new
	syscalls, too.

	* sysdeps/unix/sysv/linux/dl-origin.c (_dl_get_origin): We cannot
	use the AT_EXECFN value if it is no absolute path.
	* sysdeps/unix/sysv/linux/kernel-features.h: Never define
	__ASSUME_AT_EXECFN.

	* Versions.def: Add GLIBC_2.9 to libresolv.
	* include/resolv.h: Remove hidden proto declarations for __ns_*
	functions.  Add them for __dn_count_labels and __p_secstodate.
	* include/arpa/nameser.h: Add a number of hidden proto declarations.
	Define ns_msg_getflags macro here.
	* resolv/res_debug.c: Add hidden definition for __dn_count_labels
	and __p_secstodate.
	* resolv/Versions: Export functions from <arpa/nameser.h> from
	libresolv in version GLIBC_2.9.
	* resolv/ns_name.c: Integrate changes from bind 9.5.0.  Add necessary
	hidden definitions.
	* resolv/ns_netint.c: Likewise.
	* resolv/ns_parse.c: Likewise.
	* resolv/ns_print.c: Likewise.
	* resolv/ns_samedomain.c: Likewise.
	* resolv/ns_ttl.c: Likewise.
	* resolv/arpa/nameser_compat.h: Likewise.